refactor: modify code by mapstruct